# biolumia

./: project_example.json  setup.cfg
biolumia/: __main__.py  mainwindow.py  project.py
biolumia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/: m997dd.fts  s998dd.fts
