[metadata]
name = biolumia
version = attr: biolumia.__version__
description = GUI to visualize and process variant data
long_description = file: README.md
long_description_content_type = text/markdown
author = Sacha Schutz
author_email = sacha@labsquare.org
url = https://github.com/labsquare/biolumia
license = GPL
keywords = GUI, health
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = biolumia
install_requires =
    PySide2>=5.11.2
    astropy
  

[options.extras_require]
dev =
    pytest-cov>=2.6.1
    pytest-qt>=3.2.2
    pytest>=4.0.1
  

[options.entry_points]
gui_scripts =
    biolumia = biolumia.__main__:main

[aliases]
test=pytest
